--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -58,12 +58,11 @@
       "metadata": {
         "id": "mcY_1AG0pDSH",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "2bbd12d6-20ef-4b0f-8193-4b27cca6ae33"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +81,7 @@
       "metadata": {
         "id": "v5NxSI5fhpTB"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +94,7 @@
       "metadata": {
         "id": "UQbFMKotiV5g"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,12 +105,11 @@
       "metadata": {
         "id": "VivVAU8mir3n",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "bdb85e2e-5ab6-4543-a0d5-600baa97d9ad"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +136,7 @@
         },
         "outputId": "0084541d-6d08-4520-ace8-17d50278e8d5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,12 +481,11 @@
       "metadata": {
         "id": "XQlWv29XixZs",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "3c677de9-a660-4360-d56f-6cacfcfb8728"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +523,7 @@
         },
         "outputId": "11a7936d-1b9a-4f31-8d08-66f83b64e554"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +625,7 @@
         },
         "outputId": "05a31919-b4bb-433e-b516-c051e2ee8d11"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +662,7 @@
         },
         "outputId": "b360ca04-1017-4997-8411-f6dea4f3eee3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +744,7 @@
         },
         "outputId": "ae8b58f2-2b14-45b2-8950-42ede9f605a2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -770,12 +767,11 @@
       "metadata": {
         "id": "G7Z1BjaIi-GJ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "e1e26e32-d8a3-4d94-fb43-5ee9cf705a08"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +806,7 @@
         },
         "outputId": "d7d21dd2-7255-42ad-ab92-43d19d83d1a6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -832,12 +828,11 @@
       "metadata": {
         "id": "lmBuFbFejBhD",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "be202bde-9bc4-4ca4-c080-38c82ca6c89e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -861,7 +856,7 @@
         },
         "outputId": "c19b6521-fb17-481c-956f-7b372c856feb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +965,7 @@
         },
         "outputId": "6cf33c0d-fb78-4a38-ee6b-d4e003186690"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1011,7 @@
       "metadata": {
         "id": "H3ph3czVjNcK"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,12 +1022,11 @@
       "metadata": {
         "id": "uKLSfPxkjRGP",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "7345b567-6681-4e87-f83d-44b784da8492"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,12 +1045,11 @@
       "metadata": {
         "id": "Gnk61CmsjUJo",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "3d6f2979-a5f6-4f89-a435-d934db657385"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,12 +1068,11 @@
       "metadata": {
         "id": "MTBv7wzmjWJu",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "ee3c2fc4-41b3-4929-933d-2d0157bab837"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,7 +1095,7 @@
       "metadata": {
         "id": "JeW8ym5SjZLZ"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1117,7 +1109,7 @@
       "metadata": {
         "id": "h5Tdu5jqjb6J"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1131,7 +1123,7 @@
       "metadata": {
         "id": "zuk9NAwojeiq"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1147,7 +1139,7 @@
       "metadata": {
         "id": "-tvQewMOjgoc"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1158,7 +1150,7 @@
       "metadata": {
         "id": "3VH2m7d5ji-p"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1163,7 @@
       "metadata": {
         "id": "1TFn-nqIjkrt"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,7 +1192,7 @@
         },
         "outputId": "4c301ead-99dd-4dba-97ac-b7f7b843f754"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1546,7 +1538,7 @@
       "metadata": {
         "id": "KFNZllhGjqy8"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1558,7 +1550,7 @@
       "metadata": {
         "id": "TrKusS1ejsiE"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1570,7 +1562,7 @@
       "metadata": {
         "id": "1xqOA-OujuId"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1582,7 +1574,7 @@
       "metadata": {
         "id": "MIp2OF-Mjv0i"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1604,7 +1596,7 @@
       "metadata": {
         "id": "WxcS7-cAjz5L"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1615,12 +1607,11 @@
       "metadata": {
         "id": "o6pXLnwMj2pn",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "429e8048-b438-4e75-d5d7-ab275049566d"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1643,7 +1634,7 @@
       "metadata": {
         "id": "0WkKhqcJj4Qk"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1654,12 +1645,11 @@
       "metadata": {
         "id": "ooDmlY_5j5wg",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "12e0cc50-734c-4ade-f3be-98743ec265ff"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1682,7 +1672,7 @@
       "metadata": {
         "id": "6jxs9CE9j9zt"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1693,7 +1683,7 @@
       "metadata": {
         "id": "wg3v-G8rj_6i"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1711,7 +1701,7 @@
       "metadata": {
         "id": "3QCbNaUPkBjj"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1731,13 +1721,12 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "CddR0lYnt8v7",
         "outputId": "b8f97a06-75e9-4b24-e5b8-85435be7fdb5"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1768,7 +1757,7 @@
       "metadata": {
         "id": "LPiZAa4_kF16"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1780,12 +1769,11 @@
       "metadata": {
         "id": "cuAblRuykIK7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "eb705f77-f25e-4e39-d4b9-1ade324ce250"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1795,6 +1783,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "# Assuming 'cv' is your fitted CountVectorizer\n",
+        "joblib.dump(cv, '/content/drive/My Drive/database/cv.pkl')\n",
+        "\n",
+        "# Assuming 'tv' is your fitted TfidfVectorizer\n",
+        "joblib.dump(tv, '/content/drive/My Drive/database/tv.pkl')\n",
+        "\n",
+        "# Assuming 'lb' is your fitted LabelBinarizer\n",
+        "joblib.dump(lb, '/content/drive/My Drive/database/lb.pkl')"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "P1r-jLT8sfcT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
